; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_locks.c_posix_lock_to_flock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_locks.c_posix_lock_to_flock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flock = type { i64, i64, i32, i64, i32 }
%struct.file_lock = type { i64, i64, i32, i32 }

@OFFSET_MAX = common dso_local global i64 0, align 8
@EOVERFLOW = common dso_local global i32 0, align 4
@OFFT_OFFSET_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.flock*, %struct.file_lock*)* @posix_lock_to_flock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @posix_lock_to_flock(%struct.flock* %0, %struct.file_lock* %1) #0 {
  %3 = alloca %struct.flock*, align 8
  %4 = alloca %struct.file_lock*, align 8
  store %struct.flock* %0, %struct.flock** %3, align 8
  store %struct.file_lock* %1, %struct.file_lock** %4, align 8
  %5 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %6 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %5, i32 0, i32 3
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.flock*, %struct.flock** %3, align 8
  %9 = getelementptr inbounds %struct.flock, %struct.flock* %8, i32 0, i32 4
  store i32 %7, i32* %9, align 8
  %10 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %11 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.flock*, %struct.flock** %3, align 8
  %14 = getelementptr inbounds %struct.flock, %struct.flock* %13, i32 0, i32 0
  store i64 %12, i64* %14, align 8
  %15 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %16 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @OFFSET_MAX, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  br label %30

21:                                               ; preds = %2
  %22 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %23 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %26 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = sub nsw i64 %24, %27
  %29 = add nsw i64 %28, 1
  br label %30

30:                                               ; preds = %21, %20
  %31 = phi i64 [ 0, %20 ], [ %29, %21 ]
  %32 = load %struct.flock*, %struct.flock** %3, align 8
  %33 = getelementptr inbounds %struct.flock, %struct.flock* %32, i32 0, i32 1
  store i64 %31, i64* %33, align 8
  %34 = load %struct.flock*, %struct.flock** %3, align 8
  %35 = getelementptr inbounds %struct.flock, %struct.flock* %34, i32 0, i32 3
  store i64 0, i64* %35, align 8
  %36 = load %struct.file_lock*, %struct.file_lock** %4, align 8
  %37 = getelementptr inbounds %struct.file_lock, %struct.file_lock* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.flock*, %struct.flock** %3, align 8
  %40 = getelementptr inbounds %struct.flock, %struct.flock* %39, i32 0, i32 2
  store i32 %38, i32* %40, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
